# liquidator

./: .gitignore  Cargo.toml  PROGRESS.md  README.md  STORAGE_QUICKSTART.md  liquidator.db-journal
.md/: ARCHITECTURE.md  EVENT_DETECTION.md  FORK_BOT_REAL_TEST_SCENARIOS.md  PROGRESS.md  STRICT_REAL_LIQUIDATION_AND_NONCE_PLAN.md  TEST_PLAN_STRATEGY.md
contracts/: MockPriceFeed.sol
dashboard-ui/: app.js  index.html  styles.css
docs/: README.md  cast_commands.md  defense_questions.md  nfr3_followups.md  onchain_run.md
docs/diagrams/: 00_system_overview.puml  00_system_overview_activity.puml  01_risk_engine_sequence.puml  01_risk_engine_uc01.puml  01_risk_engine_uc02.puml  02_oracle_sequence.puml  02_oracle_uc03.puml  02_oracle_uc04.puml  02_oracle_usecase.puml  03_1_architecture_overview.puml  03_profit_sequence.puml  03_profit_uc05.puml  03_profit_uc06.puml  03_profit_usecase.puml  03_system_architecture.puml  04_strategy_sequence.puml  04_strategy_uc07.puml  04_strategy_uc08.puml  04_strategy_usecase.puml  05_executor_sequence.puml  05_executor_uc09.puml  05_executor_uc10.puml  05_executor_usecase.puml  (+8 more)
examples/: storage_example.rs
fork-blockchain/: package-lock.json  package.json
scripts/: crash_price.ps1  setup_liquidation_scenario.ps1  start_anvil.ps1  start_hardhat.ps1
scripts-ubuntu/: README.md  crash_price.sh  setup_liquidation_scenario.sh  start_anvil.sh
src/: lib.rs  main.rs
tests/: README.md  executor_integration.rs  oracle_integration.rs  profit_scenario.rs  risk_event_pipeline_integration.rs  strategy_integration.rs  strategy_scenario.rs
(+67 files in other folders)
