[package]
name = "liquidator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
futures = "0.3"
rand = "0.8"

# Ethereum dependencies
ethers = { version = "2.0", features = ["ws"] }
# alloy = { version = "0.1", features = ["full"] }
