[package]
name = "liquidator"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.32", features = ["full"] }
dashmap = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
futures = "0.3"
rand = "0.8"
dotenvy = "0.15"

# Storage dependencies
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }
ordered-float = "4.2"

# Ethereum dependencies
ethers = { version = "2.0", features = ["ws"] }
# alloy = { version = "0.1", features = ["full"] }
